# AutoNarro

./: .dockerignore  .env.example  .gitignore  .vercelignore  Annotation.md  Dockerfile  FILES.md  README.md  analysis.py  analysis_reg.py  analysis_reg_update_12.py  analyze_errors.py  analyze_errors_regression.py  analyze_multitask_errors.py  analyze_multitask_metadata.py  analyze_regression_bert_full.py  analyze_regression_errors.py  analyze_regression_metadata.py  automated_feature_extractor.py  bart_cue_predictor.py  bart_predictor.py  docker-compose.prod.yml  docker-compose.yml  linguistic_feature_extractor.py  predict_and_report.py  pyproject.toml  question_templates.json  regression_analysis_final.py  requirements-vercel.txt  requirements.txt  run_web.py  sample_new_data_template.csv  train.py  train_bart_cue_generator.py  train_clue_augmented_model.py  train_clue_augmented_noQA.py  train_clue_augmented_noist.py  train_final_automated_model.py  train_multitask_ablation_no_ist.py  train_multitask_ablation_no_qa.py  (+3 more)
api/: index.py
backend/: account_store.py  admin_analytics.py  admin_data.py  auth.py  bootstrap.py  env_loader.py  evaluation_access.py  evaluation_service.py  evaluation_store.py  job_worker.py  llm_service.py  logging_config.py  parent_survey.py  personalized_picture_book_service.py  personalized_picture_book_store.py  pn_agent_story.py  security.py  story_coach.py  system_metrics.py  tenant.py  user_profile_store.py  volc_tts_service.py
configs/: bart_narro_v4.json  brand.json  golden_samples.json  llm_config.example.json  micro_narro_v4.json  (+7 more)
(+149 files in other folders)
