[project]
name = "autonarro"
version = "0.1.0"
description = "Narro children narrative assessment web API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
]

[project.scripts]
app = "api.index:app"

[tool.vercel]
entrypoint = "api.index:app"
